Fix problem with modal & z-index

--- a/src/less/blocks/page.less
+++ b/src/less/blocks/page.less
@@ -126,8 +126,11 @@
   //overflow: hidden; TODO: need test on mobile devices
   margin: auto;
   flex-wrap: wrap;
-  position: relative;
-  z-index: 10;
+
+  &-up {
+    position: relative;
+    z-index: 10;
+  }
 
   &-block {
     display: block;
